--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+1.36 -
+- Added softdepend for Multiverse-Core
+
+1.35 -
+- Fixes economy NPE
+
 1.34 -
 - Fixes NPE when starting an auction
 - Fixes array out of bounds exception when quantity is not specified
