--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.37 -
+- Added warning on invalid world names in config
+- Fixes a locale related NPE after auction end for offline players
+
 1.36 -
 - Added softdepend for Multiverse-Core
 
