Support for written books, enchanted books, and renamed items.

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 1.39.4 -
 - Bane of Anthropods enchantment should now display properly
 - Fixes issue with quantity being set to 1 when a custom time is used
+- Support for written books, enchanted books, and renamed items.
 
 1.39.3 -
 - Fixes an issue with storing multiple stacks in item stash
