--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,5 @@
 1.39.4 -
-- Bane of Anthropods enchantment should now display properly
+- Bane of Arthropods enchantment should now display properly
 - Fixes issue with quantity being set to 1 when a custom time is used
 - Support for written books, enchanted books, and renamed items.
 - Better handling of stack comparisons
