--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+1.39.5 -
+- Fixes a duplication exploit with potions
+- Fixes stack size issues
+- Added locale message for 'Thorns' enchantment.
+
 1.39.4 -
 - Bane of Arthropods enchantment should now display properly
 - Fixes issue with quantity being set to 1 when a custom time is used
