--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+1.39.6 -
+- Players should now be removed from the GroupCache normally.
+
 1.39.5 -
 - Fixes a duplication exploit with potions
 - Fixes stack size issues
