--- a/TODO
+++ b/TODO
@@ -1,6 +1,3 @@
-1.4 -
-- World guard regions. - DONE
-- List items in queue. - DONE
+- Fixed missing token errors for queue list
 - World groups can be disabled entirely .
-- Fixed 'locale message not found' issues. - DONE
 - Allows min and day for time
